[package]
name = "conf"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.6", features = ["derive"] }
colored = "2.0.0"
dirs = "4.0.0"
edit = "0.1.4"
serde = { version = "1.0.152", features = ["serde_derive"] }
serde_json = "1.0.93"
